--- a/latest/release_notes/index.html
+++ b/latest/release_notes/index.html
@@ -282,7 +282,7 @@
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2024-2024 OPEA™, a Series of LF Projects, LLC.
+    <p>&#169; Copyright 2024 OPEA™, a Series of LF Projects, LLC.
 
 <!-- span class="lastupdated">Last updated on Aug 06, 2024. Published on </span -->
 <span class="lastupdated">Published on Aug 06, 2024.</span>
