--- a/404.html
+++ b/404.html
@@ -276,7 +276,7 @@ the major sections of our site, or use the document search box.</p>
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2024-2024 OPEA™, a Series of LF Projects, LLC.
+    <p>&#169; Copyright 2024 OPEA™, a Series of LF Projects, LLC.
 
 <!-- span class="lastupdated">Last updated on Aug 06, 2024. Published on </span -->
 <span class="lastupdated">Published on Aug 06, 2024.</span>
