--- a/latest/community/CODE_OF_CONDUCT.html
+++ b/latest/community/CODE_OF_CONDUCT.html
@@ -392,7 +392,7 @@ version 2.1, available at
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2024-2024 OPEA™, a Series of LF Projects, LLC.
+    <p>&#169; Copyright 2024 OPEA™, a Series of LF Projects, LLC.
 
 <!-- span class="lastupdated">Last updated on Aug 06, 2024. Published on </span -->
 <span class="lastupdated">Published on Aug 06, 2024.</span>
