--- a/latest/community/SECURITY.html
+++ b/latest/community/SECURITY.html
@@ -283,7 +283,7 @@ Furthermore, by downloading and using the Downloaded Files, even if they are ins
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2024-2024 OPEA™, a Series of LF Projects, LLC.
+    <p>&#169; Copyright 2024 OPEA™, a Series of LF Projects, LLC.
 
 <!-- span class="lastupdated">Last updated on Aug 06, 2024. Published on </span -->
 <span class="lastupdated">Published on Aug 06, 2024.</span>
