--- a/latest/developer-guides/docbuild.html
+++ b/latest/developer-guides/docbuild.html
@@ -582,7 +582,7 @@ filtering is done as part of the <code class="docutils literal notranslate"><spa
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2024-2024 OPEA™, a Series of LF Projects, LLC.
+    <p>&#169; Copyright 2024 OPEA™, a Series of LF Projects, LLC.
 
 <!-- span class="lastupdated">Last updated on Aug 06, 2024. Published on </span -->
 <span class="lastupdated">Published on Aug 06, 2024.</span>
