--- a/latest/guide/installation/gmc_install/gmc_install.html
+++ b/latest/guide/installation/gmc_install/gmc_install.html
@@ -357,7 +357,7 @@ kubectl<span class="w"> </span><span class="nb">exec</span><span class="w"> </sp
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2024-2024 OPEA™, a Series of LF Projects, LLC.
+    <p>&#169; Copyright 2024 OPEA™, a Series of LF Projects, LLC.
 
 <!-- span class="lastupdated">Last updated on Aug 06, 2024. Published on </span -->
 <span class="lastupdated">Published on Aug 06, 2024.</span>
