--- a/latest/guide/installation/k8s_install/k8s_instal_aws_eks.html
+++ b/latest/guide/installation/k8s_install/k8s_instal_aws_eks.html
@@ -334,7 +334,7 @@ You can upload your image to an AWS private registry using the following steps:<
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2024-2024 OPEA™, a Series of LF Projects, LLC.
+    <p>&#169; Copyright 2024 OPEA™, a Series of LF Projects, LLC.
 
 <!-- span class="lastupdated">Last updated on Aug 06, 2024. Published on </span -->
 <span class="lastupdated">Published on Aug 06, 2024.</span>
