--- a/latest/guide/installation/k8s_install/k8s_install_kubespray.html
+++ b/latest/guide/installation/k8s_install/k8s_install_kubespray.html
@@ -536,7 +536,7 @@ kube-system                  nodelocaldns-wvktt                         1/1     
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2024-2024 OPEA™, a Series of LF Projects, LLC.
+    <p>&#169; Copyright 2024 OPEA™, a Series of LF Projects, LLC.
 
 <!-- span class="lastupdated">Last updated on Aug 06, 2024. Published on </span -->
 <span class="lastupdated">Published on Aug 06, 2024.</span>
