doc: update redirect title
Signed-off-by: David B. Kinder <david.b.kinder@intel.com>

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>ACRN Hypervisor documentation Redirect</title>
+    <title>OPEA Project Documentation Redirect</title>
     <meta http-equiv="refresh" content="0; URL=latest/index.html">
     <script>
       window.location.href = "latest/index.html"
     </script>
   </head>
   <body>
-    <p>Please visit the <a href="/latest/">latest ACRN documentation</a></p>
+    <p>Please visit the <a href="/latest/">latest OPEA Project documentation</a></p>
   </body>
 </html>
