--- a/latest/GenAIExamples/README.html
+++ b/latest/GenAIExamples/README.html
@@ -29,7 +29,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Legal Information" href="LEGAL_INFORMATION.html" />
-    <link rel="prev" title="Single Node On-Prem Deployment: NVIDIA GPUs" href="../examples/ChatQnA/deploy/nvidia.html" /> 
+    <link rel="prev" title="Single node on-prem deployment with TGI on Nvidia gpu" href="../examples/ChatQnA/deploy/nvidia.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -2174,7 +2174,7 @@
           </div>
 
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../examples/ChatQnA/deploy/nvidia.html" class="btn btn-neutral float-left" title="Single Node On-Prem Deployment: NVIDIA GPUs" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../examples/ChatQnA/deploy/nvidia.html" class="btn btn-neutral float-left" title="Single node on-prem deployment with TGI on Nvidia gpu" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="LEGAL_INFORMATION.html" class="btn btn-neutral float-right" title="Legal Information" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
